# Hakthone2-phase2

phase2/: .gitignore  README.md  package-lock.json  package.json
phase2/.claude/: context.md
phase2/.specify/memory/: constitution.md
phase2/backend/: pyproject.toml  requirements.txt
phase2/backend/src/: database.py  main.py
phase2/backend/src/api/: auth_routes.py  task_routes.py
phase2/backend/src/config/: security.py
phase2/backend/src/middleware/: auth.py
phase2/backend/src/models/: task.py  user.py
phase2/backend/src/services/: auth_service.py  task_service.py  user_service.py
phase2/backend/src/utils/: error_handler.py
phase2/backend/tests/unit/: test_task_service.py  test_user_service.py
phase2/docs/: README.md  quickstart.md
phase2/frontend/: package-lock.json  package.json  tailwind.config.js
phase2/frontend/src/app/: globals.css  layout.tsx  page.tsx
phase2/frontend/src/app/dashboard/: page.tsx
phase2/frontend/src/app/login/: page.tsx
phase2/frontend/src/app/signup/: page.tsx
phase2/frontend/src/components/TaskForm/: TaskForm.tsx
phase2/frontend/src/components/TaskList/: TaskList.tsx
phase2/frontend/src/contexts/: AuthContext.tsx
phase2/frontend/src/hooks/: useAuth.ts  useTasks.ts
phase2/frontend/src/lib/: api.ts  auth.ts  authUtils.ts
phase2/frontend/src/types/: index.ts
phase2/frontend/tests/: api-client.test.ts  useTasks.test.tsx
phase2/history/prompts/constitution/: 1-amend-constitution.constitution.prompt.md
